app/assets/stylesheets/app/order_management.scss
.modal-body {
  max-height: 800px;
}

.order-action .btn {
  margin-top: 1em;
}

#order-detail-modal {
  width: 1000px;
  /* must be half of the width, minus scrollbar on the left (30px) */
  margin-left: -500px;
}

.banner-list {
  dl {
    margin-top: 0;

    dt {
      font-weight: bold;
    }
    dd {
      margin-left: 0;
    }
  }
}

#product_add_quantity {
  width: 3em;
}
#product_add_chzn {
  top: -3px;
}

/* Generic Form Overrides */
.manage_order_detail {
  input[type=text],
  .input-prepend .add-on {
    padding: 1px 6px !important;
  }

  .input-prepend .add-on {
    padding: 1px 3px !important;
  }

  label {
    font-weight: bold;
    margin-bottom: 1px;
  }

  .timeinput {
    width: 5em;
  }

  .datepicker {
    width: 7em;
  }

  .note {
    width: 80%;
  }
}

/* Specific Form Overrides */
.manage_order_detail {
  .order_detail_order_status {
    float: left;
  }

  .cancel-fee-option {
    margin-top: 1.5em;
  }

  .copy_actual_from_reservation {
    padding-top: 1.7em;
    i {
      font-size: 160%;
    }

  }
  .cost-table {
    .cost, .subsidy, .total {
      float: left;
      width: 30%;
    }
    .subsidy {
      .help-block {
        @extend .muted;
      }
    }
  }

  .inline-icons {
    font-size: 200%;
    margin-top: 0.75em;
  }
}

/* Order Management Page */
table.order-list {
  tr.child {
    .product {
      padding-left: 3em;
    }
  }

  tr.status-cancelled {
    @extend .muted;
  }

  th {
    text-align: center;

    &.currency, &.time {
      text-align: right;
    }

    &.order-id {
      text-align: left;
    }
  }

  th.currency,
  th.time,
  td.currency,
  td.time {
    border-left: 1px solid $tableBorder;
    border-right: 1px solid $tableBorder;
    width: 70px;
  }

  td.time {
    text-align: right;
  }

  td {
    &.badges,
    &.order-id {
      width: 70px;
    }

    &.badges {
      text-align: center;
    }
  }

  .estimated_cost {
    @extend .label;
  }

  [class^="icon-"], [class*=" icon-"] {
    font-size: 125%;
  }

  .inline-icons {
    float: left;
    margin-left: 0.75em;
  }
}

.label {
  &.status-complete,
  &.status-reconciled {
    @extend .label-success;
  }

  &.status-cancelled {
    @extend .label-important;
  }
}

.modal {
  .updating-message {
    color: #AAA;
    display: inline-block;
    padding-left: 20px;
    background-image: image-url("spinner-arrow.gif");
    background-repeat: no-repeat;
    margin-right: 0.75em;
  }
}

